# marketplace-analytics

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml
app/: main.py
app/clients/: base.py  wildberries.py
app/core/: config.py
app/database/: engine.py  users.py
app/models/: User.py
app/routers/: users.py  wildberries.py
tests/integration/: conftest.py  test_wildberries_service.py
tests/unit/: test_wildberries_service.py
