[project]
name = "marketplace-aggregator"
version = "0.1.0"
description = ""
authors = [
    {name = "Aslan Bezhanov",email = "aslanbezhanov@gmail.com"},
    {name = "Vyacheslav Lychkin",email = "slavishly.lychkin@gmail.com"},
    {name = "Maksim Galstyan",email = "maksimgalstyan09@gmail.com"},
]
requires-python = "^3.12"
dependencies = [
    "fastapi (==0.135.3)",
    "uvicorn (==0.44.0)",
    "requests (==2.33.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.3.1,<27.0.0)"
]

[tool.black]
line-length = 80